[package]
name = "clearc"
version = "0.0.1"
authors = ["enfipy"]
license = "MIT"
repository = "https://github.com/enfipy/clearc"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
chrono = "0.4"
uuid = { version = "0.5", features = ["serde", "v4"] }
actix-web = "1.0.0-rc"

r2d2_postgres = "0.14.0"
postgres = { version = "0.15", features = ["with-uuid"] }
postgres-derive = "0.3"
sendgrid = "0.8.1"

[[bin]]
name = "clearc"
path = "src/main.rs"
