[package]
name = "clearc"
version = "0.0.1"
authors = ["enfipy"]
license = "MIT"
repository = "https://github.com/enfipy/clearc"
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
smart-default = "0.5.2"
json = "*"
envy = "0.4"
validator = "0.8.0"
validator_derive = "0.8.0"

r2d2_postgres = "0.14.0"
postgres = { version = "0.15", features = ["with-uuid"] }
postgres-derive = "0.3"

uuid = { version = "0.5", features = ["serde", "v4"] }
chrono = "0.4"

actix-web = "1.0.0"
sendgrid = "0.8.1"

[[bin]]
name = "clearc"
path = "src/main.rs"
